--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -155,6 +155,7 @@
 		          </label>
 		    </div> -->
 			<reporting-entities ng-data="flowEntities"
+			worldpartner="worldpartner"
 			color="matrixColorBy"
 			flow-type="chartFlow"
 			layout="matrixLayout"
