--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -1,36 +1,36 @@
 <div class="container">
-    <div ng-show="missing" class="alert"> 
+    <div ng-show="missing" class="alert">
       <div class="modal-body" >
        <p>
           There is <strong>no data available</strong> in the database for {{entities.sourceEntity.selected.RICname}}
        </p>
        <p>
-       between {{selectedMinDate}} and {{selectedMaxDate}}  
+       between {{selectedMinDate}} and {{selectedMaxDate}}
        </p>
         <p>
           Choose another one or change date selection, thank you !
        </p>
       </div>
       <div class="modal-footer">
-          <button class="btn btn-default" ng-click="ok()">Change fields manually</button> or 
+          <button class="btn btn-default" ng-click="ok()">Change fields manually</button> or
           <button class="btn btn-default" ng-click="fieldsByDefault()">Set fields by default</button>
       </div>
     </div>
-    <div ng-show="missingTarget" class="alert"> 
+    <div ng-show="missingTarget" class="alert">
       <div class="modal-body" >
       <h4> {{message}} </h4>
        <p>
           There is <strong>no data available</strong> in the database for {{entities.sourceEntity.selected.RICname}} with {{entities.targetEntity.selected.RICname}}
        </p>
        <p>
-       between {{selectedMinDate}} and {{selectedMaxDate}}  
+       between {{selectedMinDate}} and {{selectedMaxDate}}
        </p>
         <p>
           Choose another one or change date selection, thank you !
        </p>
       </div>
       <div class="modal-footer">
-          <button class="btn btn-default" ng-click="okTarget()">Change fields manually</button> or 
+          <button class="btn btn-default" ng-click="okTarget()">Change fields manually</button> or
           <button class="btn btn-default" ng-click="fieldsByDefault()">Set fields by default</button>
       </div>
     </div>
@@ -54,11 +54,11 @@
   {{ 'BILATERAL_2' | translate }} {{entities.sourceEntity.selected.RICname}}
 </h4>
     </br>
-      <dual-timeline 
-        ng-data="timelineData" 
-        start-date="selectedMinDate" 
+      <dual-timeline
+        ng-data="timelineData"
+        start-date="selectedMinDate"
         end-date="selectedMaxDate">
-      </dual-timeline>      
+      </dual-timeline>
     </div>
 
     <div class="timeline-cont col-md-12">
@@ -76,7 +76,7 @@
           <div class="line unavailable"></div> {{ 'UNAVAILABLE' | translate }}
         </div>
         <div class="legend-item">
-          {{ 'CURRENCY' | translate }} <strong>{{actualCurrency}}</strong> 
+          {{ 'CURRENCY' | translate }} <strong>{{actualCurrency}}</strong>
         </div>
       </div>
       <br>
@@ -122,9 +122,9 @@
       <p class="paragraphViz">
         {{ 'COMPARISON_INTRO' | translate }}
       </p>
-      <comparison-timeline 
-      ng-data="timelineData" 
-      start-date="selectedMinDate" 
+      <comparison-timeline
+      ng-data="timelineData"
+      start-date="selectedMinDate"
       end-date="selectedMaxDate">
       </comparison-timeline>
       <div class="legend">
@@ -132,21 +132,21 @@
            <strong>A</strong> reporting : {{entities.sourceEntity.selected.RICname}} | <strong>B</strong> partner : {{entities.targetEntity.selected.RICname}}
            <br>
            <br>
-          <span class="legendImport">Imp A <-B </span> = {{ 'COMPARAISON_LEG_1' | translate }}  | <span class="legendExport">Imp B <-A </span> = {{ 'COMPARAISON_LEG_2' | translate }} 
+          <span class="legendImport">Imp A <-B </span> = {{ 'COMPARAISON_LEG_1' | translate }}  | <span class="legendExport">Imp B <-A </span> = {{ 'COMPARAISON_LEG_2' | translate }}
           <br>
           <br>
-          <span class="legendImport">Exp B->A</span> = {{ 'COMPARAISON_LEG_3' | translate }}  | <span class="legendExport">Exp A->B</span> = {{ 'COMPARAISON_LEG_4' | translate }} 
+          <span class="legendImport">Exp B->A</span> = {{ 'COMPARAISON_LEG_3' | translate }}  | <span class="legendExport">Exp A->B</span> = {{ 'COMPARAISON_LEG_4' | translate }}
       </div>
       <div class="legend">
         <div class="legend-item" >
           {{ 'MIRROR' | translate }}
           <div class="line diff-import" style="margin-left:20px;"></div>
-          <strong>(Imp A <-B - Exp B->A) / Exp B->A</strong>
+          <strong>(Imp A <-B - Exp B->A) / Imp A <-B</strong>
         </div>
         or
         <div class="legend-item" style="margin-left:20px;">
           <div class="line diff-export"></div>
-          <strong>(Imp B <-A - Exp A->B) / Exp A->B</strong>
+          <strong>(Exp A->B - Imp B <-A) / Exp A->B</strong>
         </div>
       </div>
       <br>
