corrected a miscalculation of average trade share when null flows in country view. To be reviewed by @mydu

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -184,6 +184,14 @@
             <text x="40" y="20" fill="black">{{ 'PARTNER_HISTO_LEG_2' | translate }}</text>
           </svg>
         </div>
+        <div class="legend-item">
+          <svg height="35" width="300">
+            <rect x="15" y="0" width="10" height="15" style="fill:#663333;opacity:0.3" />
+            <rect x="25" y="15" width="10" height="15" style="fill:#cc6666;opacity:0.3" />
+            <text x="40" y="20" fill="black">Only export or import available</text>
+          </svg>
+        </div>
+
       </div>
     </div>
   </div>
