modify category color(world,metadata)

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -709,9 +709,9 @@ h4 {
 
 .legend .square.import{ background-color: #cc6666; }
 .legend .square.export{ background-color: #663333; }
-.legend .square.worldsum{ background-color: #314856; }
+.legend .square.worldsum{ background-color: #526ca9; }
 .legend .square.worldreport{ background-color: #a67f48; }
-.legend .square.worldestimate{ background-color: #235135; }
+.legend .square.worldestimate{ background-color: #75792f; }
 
 
 .legend .line{
