--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1116,7 +1116,7 @@ div #reporting-entities-container{
   border-radius: 5px;
   opacity: 0;
   font-family: 'merriweather', 'Georgia', serif;
-  font-size: 11px;
+  font-size: 12px;
 }
 /*.matrix-tooltip h5,.continent-tooltip h5,.synth-tooltip h5{
  text-align: center;
@@ -1134,10 +1134,9 @@ div #reporting-entities-container{
   padding-right: 7px;
   border-top: 1px solid #D1D1D1;
 }
-/*.matrix-tooltip .source,.matrix-tooltip .title p{
- font-family: 'merriweather', 'Georgia', serif;
+.matrix-tooltip .source,.synth-tooltip td{
  font-size: 11px;
-}*/
+}
 
 .sideLabel{
   font-family: 'montserrat', 'Arial', safouns-serif;
