--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -92,6 +92,13 @@
 		        </ui-select>
 		    </div>
 			</h4>
+			<div ng-show="true" class="legend pull-right" >
+		        <div class="legend-item" >
+		          <div><strong>A:</strong> Number of partners reported by <strong>R</strong></div>
+		          <div><strong>B:</strong> Number of reportings reports <strong>R</strong> as partner</div>
+		          <div><strong>Bilateral Rate:</strong> 2*(A &cap; B) /(A &cup; B)</div>
+		        </div>
+		     </div>
 		    <reporting-synth
 				ng-data="flow"
 				flow-type="chartFlow"
