unify color legend(metatdata)

--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -96,7 +96,7 @@
 		        <div class="legend-item" >
 		          <div><strong>A:</strong> Number of partners reported by <strong>R</strong></div>
 		          <div><strong>B:</strong> Number of reportings reports <strong>R</strong> as partner</div>
-		          <div><strong>Bilateral Rate:</strong> 2*(A &cap; B) /(A &cup; B)</div>
+		          <div><strong>Bilateral Rate:</strong> A &cap; B /A &cup; B</div>
 		        </div>
 		     </div>
 		    <reporting-synth
