add space between stacked bar

--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -72,7 +72,7 @@
 		          </choices>
 		        </ui-select>
 		    </div>
-		    Color By
+		    Color by
 		    <div class="inline-select">
 		        <ui-select ng-model="matrixColorBy" theme="bootstrap" ng-change="changeMatrixColor(matrixColorBy)">
 		          <match placeholder="Color By">{{$select.selected.name.value}}</match>
