--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -322,7 +322,11 @@
 
   <div class="row">
     <div class="col-sm-12">
-      <linechart-world ng-data="linechartData" currency="linechartCurrency">
+      <linechart-world 
+      ng-data="linechartData" 
+      currency="linechartCurrency"
+      start-date="selectedMinDate"
+      end-date="selectedMaxDate">
       </linechart-world>
     </div>
   </div>
