modify world partner/source according to their priority(metadata)

--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -49,8 +49,8 @@
 			<div ng-show="showBilateralTip" class="legend pull-right" >
 		        <div class="legend-item" >
 		          <div><strong>A:</strong> Number of partners reported by <strong>R</strong></div>
-		          <div><strong>B:</strong> Number of reportings reports <strong>R</strong> as partner</div>
-		          <div><strong>Bilateral Rate:</strong> A &cap; B /A &cup; B</div>
+		          <div><strong>B:</strong> Number of mirror partners of <strong>R</strong></div>
+		          <div><strong>Mirror Rate:</strong> B/A</div>
 		        </div>
 		     </div>
 		    <reporting-synth
