add number of flows barchart on the top of matrix(metadata)

--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -8,6 +8,12 @@
 			</p>
 		</div>
 		<div class="col-md-12">
+			<h4>Number of Flows by Year</h4>
+			<number-flows
+				ng-data="nbFlows">
+			</number-flows>
+		</div>
+		<div class="col-md-12">
 			<h4>
 			 {{ 'METADATA_VIEW_TITLE' | translate }}
 			 <div class="inline-select">
