--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1135,7 +1135,7 @@ div #reporting-entities-container{
   border-top: 1px solid #D1D1D1;
   font-size: 11px;
 }
-.matrix-tooltip .source,.synth-tooltip .table{
+.matrix-tooltip .reference,.matrix-tooltip .source,.synth-tooltip .table{
  font-size: 11px;
 }
 
