update website description text in both languange

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -103,6 +103,7 @@
                   <h5 id="worldTrade" class="slTitle">World trade / Total trade</h5>
                   <p class="slPara"> 
                     {{ 'WORLD_TRADE' | translate }}
+                  </p>
                     <ul>
                       <li  class="slPara">
                         {{ 'WORLD_REPORTED' | translate }}
@@ -120,8 +121,14 @@
                       <li id="worldbestguess" class="slPara">
                         {{ 'WORLD_BESTGUESS' | translate }}
                       </li>
+                       <li id="worldfederico" class="slPara">
+                        {{ 'WORLD_FEDERICO' | translate }}
+                      </li>
                     </ul>
-                  </p>
+                    <p class="slPara">
+                      {{'WORLD_UNDEFINED' | translate}} 
+                    </p>
+
                 </div>
               </li>
               <li class="storyline">
