--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -8,7 +8,7 @@
 			</p>
 		</div>
 		<div class="col-md-12">
-			<h4>{{ 'METADATA_NBFLOW_TITLE' | translate }} of 
+			<h4>{{ 'METADATA_NBFLOW_TITLE' | translate }} in 
 			<div class="inline-select">
 		      <ui-select ng-model="chartFlow" theme="bootstrap" ng-change="changeFlow(chartFlow)">
 		        <match placeholder="Select flow type">{{$select.selected.name.value}}</match>
@@ -22,11 +22,12 @@
 				{{ 'METADATA_NBFLOW_INTRO' | translate }}
 			</p>
 			<number-flows
-				ng-data="nbFlows">
+				ng-data="nbFlows"
+				flow-type="chartFlow">
 			</number-flows>
-			<div class="legend pull right">
+			<div class="legend pull-right">
 		        <div class="legend-item">
-		          <div class="square world"></div> World flows
+		          <div class="square world"></div> World trade flows
 		        </div>
 		          <div class="legend-item">
 		            <div class="square bilateral"></div> Bilateral trade flows 
@@ -36,6 +37,7 @@
 		<div class="col-md-12">
 			<h4>
 			 {{ 'METADATA_MATRIX_TITLE' | translate }} 
+			 in {{chartFlow.name.value}}
 		   	</h4>
 		   	<p class="paragraphPage">
 		   	{{ 'METADATA_MATRIX_INTRO' | translate }} 
