enable anchorScroll from world to home

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -90,7 +90,7 @@
               </li>
               <li class="storyline">
 
-                <div class="slInfo">
+                <div id="worldTrade" class="slInfo">
                   <h5 class="slTitle">Continent</h5>
                   <p class="slPara"> 
                     {{ 'CONTINENT' | translate }}
@@ -98,9 +98,9 @@
 
                 </div>
               </li>
-              <li class="storyline">
+              <li id="worldbestguess" class="storyline">
                 <div class="slInfo">
-                  <h5 id="worldTrade" class="slTitle">World trade / Total trade</h5>
+                  <h5 class="slTitle">World trade / Total trade</h5>
                   <p class="slPara"> 
                     {{ 'WORLD_TRADE' | translate }}
                   </p>
@@ -118,7 +118,7 @@
                       <li class="slPara">
                         {{ 'WORLD_ESTIMATED' | translate }}
                       </li>
-                      <li id="worldbestguess" class="slPara">
+                      <li class="slPara">
                         {{ 'WORLD_BESTGUESS' | translate }}
                       </li>
                        <li id="worldfederico" class="slPara">
