max mirror partner/year

--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -97,7 +97,7 @@
 				<div>
 					<p><strong>Number of Reportings Color by</strong>
 					<br>
-					<strong>{{ matrixColorBy.name.value}}: </strong>{{"METADATA_MATRIX_INTRO_"+colorByIndex | translate}}</p>
+					<strong><u>{{ matrixColorBy.name.value}}</u>: </strong>{{"METADATA_MATRIX_INTRO_"+colorByIndex | translate}}</p>
 				</div>
 				<div ng-show="showBilateralTip">
 				      <div><strong>A:</strong> Number of partners reported by <strong>R</strong></div>
